--- a/common/ezo_do.yaml
+++ b/common/ezo_do.yaml
@@ -182,46 +182,46 @@ button:
     on_press:
       then:
         - lambda: |-
-            if (id(select_command_do).state == "Read") {
+            if (id(select_command_do).current_option() == "Read") {
               id(do_ezo).send_custom("R");
             }
-            if (id(select_command_do).state == "Information") {
+            if (id(select_command_do).current_option() == "Information") {
               id(do_ezo).get_device_information();
             }
-            if (id(select_command_do).state == "Status") {
+            if (id(select_command_do).current_option() == "Status") {
               id(do_ezo).send_custom("Status");
             }
-            if (id(select_command_do).state == "Get Enabled Parameter(s)") {
+            if (id(select_command_do).current_option() == "Get Enabled Parameter(s)") {
               id(do_ezo).send_custom("O,?");
             }
-            if (id(select_command_do).state == "Output Units - All (Default)") {
+            if (id(select_command_do).current_option() == "Output Units - All (Default)") {
               id(do_ezo).send_custom("O,mg,1");
               id(do_ezo).send_custom("O,%,1");
             }
-            if (id(select_command_do).state == "Output Units - % Saturation") {
+            if (id(select_command_do).current_option() == "Output Units - % Saturation") {
               id(do_ezo).send_custom("O,mg,0");
               id(do_ezo).send_custom("O,%,1");
             }
-            if (id(select_command_do).state == "Output Units - mg/L") {
+            if (id(select_command_do).current_option() == "Output Units - mg/L") {
               id(do_ezo).send_custom("O,mg,1");
               id(do_ezo).send_custom("O,%,0");
             }
-            if (id(select_command_do).state == "Check Calibration") {
+            if (id(select_command_do).current_option() == "Check Calibration") {
               id(do_ezo).get_calibration();
             }
-            if (id(select_command_do).state == "Calibrate @ DRY (WILL RESET CALIBRATION)") {
+            if (id(select_command_do).current_option() == "Calibrate @ DRY (WILL RESET CALIBRATION)") {
               id(do_ezo).send_custom("Cal");
             }
-            if (id(select_command_do).state == "Calibrate @ 0% (WILL RESET CALIBRATION)") {
+            if (id(select_command_do).current_option() == "Calibrate @ 0% (WILL RESET CALIBRATION)") {
               id(do_ezo).send_custom("Cal,0");
             }
-            if (id(select_command_do).state == "Calibrate CLEAR (WILL RESET CALIBRATION)") {
+            if (id(select_command_do).current_option() == "Calibrate CLEAR (WILL RESET CALIBRATION)") {
               id(do_ezo).clear_calibration();
             }
-            if (id(select_command_do).state == "Salinity Compensation Value") {
+            if (id(select_command_do).current_option() == "Salinity Compensation Value") {
               id(do_ezo).send_custom("S,?");
             }
-            if (id(select_command_do).state == "Set Salinity Compensation @ 35ppt") {
+            if (id(select_command_do).current_option() == "Set Salinity Compensation @ 35ppt") {
               id(do_ezo).send_custom("S,35.0,ppt");
             }
             // else {
