--- a/common/ezo_orp.yaml
+++ b/common/ezo_orp.yaml
@@ -102,15 +102,15 @@ button:
     on_press:
       then:
         - lambda: |-
-            byte error;
-            id(orp_ezo).send_custom("R");
-            error = Wire.endTransmission();
-            if (error == 0) {
+            // byte error;
+            // id(orp_ezo).send_custom("R");
+            // error = Wire.endTransmission();
+            // if (error == 0) {
               id(orp_ezo).send_custom("R");
-            }
-            else {
-              ESP_LOGW("custom_orp_read", "No ORP sensor detected at address: ${addORP}!!");
-            }
+            // }
+            // else {
+            //   ESP_LOGW("custom_orp_read", "No ORP sensor detected at address: ${addORP}!!");
+            // }
     web_server:
       sorting_group_id: sorting_group_orp
 
