--- a/common/ezo_ec.yaml
+++ b/common/ezo_ec.yaml
@@ -267,15 +267,15 @@ button:
     on_press:
       then:
         - lambda: |-
-            byte error;
-            Wire.beginTransmission(${addEC});
-            error = Wire.endTransmission();
-            if (error == 0) {
+            // byte error;
+            // Wire.beginTransmission(${addEC});
+            // error = Wire.endTransmission();
+            // if (error == 0) {
               id(ec_ezo).send_custom("R");
-            }
-            else {
-              ESP_LOGW("custom_conductivity_read", "No Conductivity sensor detected at address: ${addEC}!");
-            }
+            // }
+            // else {
+            //   ESP_LOGW("custom_conductivity_read", "No Conductivity sensor detected at address: ${addEC}!");
+            // }
     web_server:
       sorting_group_id: sorting_group_ec
 
@@ -289,73 +289,73 @@ button:
     on_press:
       then:
         - lambda: |-
-            if (id(select_command_ec).state == "Read") {
+            if (id(select_command_ec).current_option() == "Read") {
               id(ec_ezo).send_custom("R");
             }
-            if (id(select_command_ec).state == "Information") {
+            if (id(select_command_ec).current_option() == "Information") {
               id(ec_ezo).get_device_information();
             }
-            if (id(select_command_ec).state == "Status") {
+            if (id(select_command_ec).current_option() == "Status") {
               id(ec_ezo).send_custom("Status");
             }
-            if (id(select_command_ec).state == "Get Probe K Value") {
+            if (id(select_command_ec).current_option() == "Get Probe K Value") {
               id(ec_ezo).send_custom("K,?");
             }
-            if (id(select_command_ec).state == "Get TDS Value") {
+            if (id(select_command_ec).current_option() == "Get TDS Value") {
               id(ec_ezo).send_custom("TDS,?");
             }
-            if (id(select_command_ec).state == "Set TDS Value to NaCl - 0.48") {
+            if (id(select_command_ec).current_option() == "Set TDS Value to NaCl - 0.48") {
               id(ec_ezo).send_custom("TDS,0.48");
             }
-            if (id(select_command_ec).state == "Get Enabled Parameter(s)") {
+            if (id(select_command_ec).current_option() == "Get Enabled Parameter(s)") {
               id(ec_ezo).send_custom("O,?");
             }
-            if (id(select_command_ec).state == "Set Probe Type K1") {
+            if (id(select_command_ec).current_option() == "Set Probe Type K1") {
               id(ec_ezo).send_custom("K,1");
             }
-            if (id(select_command_ec).state == "Output Units - All (Default)") {
+            if (id(select_command_ec).current_option() == "Output Units - All (Default)") {
               id(ec_ezo).send_custom("O,EC,1");
               id(ec_ezo).send_custom("O,TDS,1");
               id(ec_ezo).send_custom("O,S,1");
               id(ec_ezo).send_custom("O,SG,1");
             }
-            if (id(select_command_ec).state == "Output Units - Conductivity") {
+            if (id(select_command_ec).current_option() == "Output Units - Conductivity") {
               id(ec_ezo).send_custom("O,EC,1");
               id(ec_ezo).send_custom("O,TDS,0");
               id(ec_ezo).send_custom("O,S,0");
               id(ec_ezo).send_custom("O,SG,0");
             }
-            if (id(select_command_ec).state == "Output Units - Salinity") {
+            if (id(select_command_ec).current_option() == "Output Units - Salinity") {
               id(ec_ezo).send_custom("O,EC,0");
               id(ec_ezo).send_custom("O,TDS,0");
               id(ec_ezo).send_custom("O,S,1");
               id(ec_ezo).send_custom("O,SG,0");
             }
-            if (id(select_command_ec).state == "Output Units - Specific Gravity") {
+            if (id(select_command_ec).current_option() == "Output Units - Specific Gravity") {
               id(ec_ezo).send_custom("O,EC,0");
               id(ec_ezo).send_custom("O,TDS,0");
               id(ec_ezo).send_custom("O,S,0");
               id(ec_ezo).send_custom("O,SG,1");
             }
-            if (id(select_command_ec).state == "Output Units - TDS") {
+            if (id(select_command_ec).current_option() == "Output Units - TDS") {
               id(ec_ezo).send_custom("O,EC,0");
               id(ec_ezo).send_custom("O,TDS,1");
               id(ec_ezo).send_custom("O,S,0");
               id(ec_ezo).send_custom("O,SG,0");
             }
-            if (id(select_command_ec).state == "Check Calibration") {
+            if (id(select_command_ec).current_option() == "Check Calibration") {
               id(ec_ezo).get_calibration();
             }
-            if (id(select_command_ec).state == "Calibrate @ DRY (WILL RESET CALIBRATION)") {
+            if (id(select_command_ec).current_option() == "Calibrate @ DRY (WILL RESET CALIBRATION)") {
               id(ec_ezo).send_custom("Cal,dry");
             }
-            if (id(select_command_ec).state == "Calibrate @ LOW = 12880 (WILL RESET CALIBRATION)") {
+            if (id(select_command_ec).current_option() == "Calibrate @ LOW = 12880 (WILL RESET CALIBRATION)") {
               id(ec_ezo).send_custom("Cal,low,12880");
             }
-            if (id(select_command_ec).state == "Calibrate @ HIGH = 80000 (WILL RESET CALIBRATION)") {
+            if (id(select_command_ec).current_option() == "Calibrate @ HIGH = 80000 (WILL RESET CALIBRATION)") {
               id(ec_ezo).send_custom("Cal,high,80000");
             }
-            if (id(select_command_ec).state == "Calibrate CLEAR (WILL RESET CALIBRATION)") {
+            if (id(select_command_ec).current_option() == "Calibrate CLEAR (WILL RESET CALIBRATION)") {
               id(ec_ezo).clear_calibration();
             }
             // else {
