--- a/common/ezo_pmp_blue.yaml
+++ b/common/ezo_pmp_blue.yaml
@@ -115,7 +115,7 @@ sensor:
     id: ezo_pump_blue
     max_flow_rate:
       id: max_flow_rate_blue
-      name: Pump Blue - Max Volume/Time Flow Rate
+      name: Pump Blue - Max Volume-Time Flow Rate
       icon: mdi:car-speed-limiter
       disabled_by_default: true
       unit_of_measurement: 'mL/min'
@@ -200,7 +200,7 @@ number:
   - platform: template
     id: flow_rate_blue
     icon: mdi:waves-arrow-right
-    name: Pump Blue - Volume/Time Flow Rate
+    name: Pump Blue - Volume-Time Flow Rate
     unit_of_measurement: 'mL/min'
     optimistic: true
     initial_value: 10
@@ -246,7 +246,7 @@ button:
     web_server:
       sorting_group_id: sorting_group_pump_blue
   - platform: template
-    name: Pump Blue - Dose at Volume/Time Flow Rate for Time
+    name: Pump Blue - Dose at Volume-Time Flow Rate for Time
     icon: mdi:format-text-wrapping-overflow
     id: dose_flow_rate_blue
     on_press:
