Use Wire library, remove i2c header and archive
Replace the custom i2c_wire.h include with the built-in Wire library in common/device_base.yaml (swap 'includes: - i2c_wire.h' for 'libraries: - Wire'). Remove the now-unused i2c_wire.h file and delete the extraneous archive/aquapi_config copy.yaml to clean up duplicate config artifacts.

--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -35,8 +35,8 @@ esphome:
   project:
     name: "${project_name}"
     version: "${app_version}"
-  includes:
-    - i2c_wire.h
+  libraries:
+    - Wire
 
 # Enable logging
 logger:
