disabled_by_default tags added
added more
    disabled_by_default: true tags

--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -7,7 +7,7 @@ packages:
   device_base: !include common/device_base.yaml
   aquapi: !include common/aquapi.yaml
   ota_https: !include common/ota_https.yaml
-  debug: !include common/debug.yaml
+  # debug: !include common/debug.yaml
   i2c_detection: !include common/i2c_detection.yaml
   dallas: !include common/temperature_dallas.yaml
   water_level: !include common/water_level.yaml
