Enable I2C presence checks for EZO sensors
Uncomment and enable I2C presence checks in EZO sensor button handlers. Each lambda now declares a byte error, calls Wire.beginTransmission/endTransmission to detect the device, sends the read command when the device responds, and logs a warning when no device is detected. Changes applied to common/ezo_co2.yaml, common/ezo_do.yaml, common/ezo_ec.yaml, common/ezo_hum.yaml, common/ezo_orp.yaml, and common/ezo_ph.yaml.

--- a/common/ezo_co2.yaml
+++ b/common/ezo_co2.yaml
@@ -142,15 +142,15 @@ button:
     on_press:
       then:
         - lambda: |-
-            // byte error;
-            // Wire.beginTransmission(${addCO2});
-            // error = Wire.endTransmission();
-            // if (error == 0) {
+            byte error;
+            Wire.beginTransmission(${addCO2});
+            error = Wire.endTransmission();
+            if (error == 0) {
               id(co2_ezo).send_custom("R");
-            // }
-            // else {
-            //   ESP_LOGW("custom_co2_read", "No Carbon Dioxide sensor detected at address: ${addCO2}!");
-            // }
+            }
+            else {
+              ESP_LOGW("custom_co2_read", "No Carbon Dioxide sensor detected at address: ${addCO2}!");
+            }
     web_server:
       sorting_group_id: sorting_group_co2
 
