Extract app version and sensor to separate file
Move the App Version substitution and the AquaPi Version template sensor out of common/aquapi.yaml into a new common/aquapi_app_version.yaml to modularize the configuration. common/aquapi.yaml now includes the new file via a packages entry (aquapi_app_version) and the original inline substitution and text_sensor block were removed. Functional behavior remains the same (app_version value and diagnostic sensor preserved) while the config is cleaner and easier to manage.

--- a/common/aquapi.yaml
+++ b/common/aquapi.yaml
@@ -1,7 +1,5 @@
 ---
 substitutions:
-  # App Version
-  app_version: "26.2.0"
   # names
   name: "aquapi"
   friendly_name: "AquaPi"
@@ -10,21 +8,13 @@ substitutions:
   sorting_group_name: "AquaPi "
   import: "false"
 
+packages:
+  aquapi_app_version: !include aquapi_app_version.yaml
+
 dashboard_import:
   package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
   import_full_config: "${import}"
 
-text_sensor:
-  # AquaPi Version
-  - platform: template
-    name: "AquaPi Version"
-    id: aquapi_version
-    icon: mdi:update
-    lambda: |-
-      return {"${app_version}"};
-    entity_category: "diagnostic"
-    web_server:
-      sorting_group_id: sorting_group_diagnostic
 
   # GitHub Project URL
   - platform: template
