--- a/common/aquapi.yaml
+++ b/common/aquapi.yaml
@@ -15,7 +15,7 @@ dashboard_import:
   package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
   import_full_config: "${import}"
 
-
+text_sensor:
   # GitHub Project URL
   - platform: template
     name: GitHub
