Use temperature_dallas_index include; move README
Update aquapi_config.yaml to use common/temperature_dallas_index.yaml for Dallas sensors (previous temperature_dallas.yaml line commented out). Also relocate TEMPERATURE_DALLAS_INDEX_README.md from common/ to the repository root (file rename only). This switches the configuration to the indexed Dallas implementation and moves the related README.

--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -9,7 +9,8 @@ packages:
   ota_https: !include common/ota_https.yaml
   # debug: !include common/debug.yaml
   i2c_detection: !include common/i2c_detection.yaml
-  dallas: !include common/temperature_dallas.yaml
+  # dallas: !include common/temperature_dallas.yaml
+  dallas: !include common/temperature_dallas_index.yaml
   water_level: !include common/water_level.yaml
   binary: !include common/binary.yaml
   ezo_ph: !include common/ezo_ph.yaml
